<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/pink_700"
        android:backgroundTint="@color/pink_700"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/pink_700"
            android:text="@string/titulo_pago"
            android:textAlignment="center"
            android:backgroundTint="@color/pink_200"
            android:textColor="#fff"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nombre_pago"
            android:textColor="#000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNombrePago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/tarjeta_pago"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTarjetaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/vencimiento_tarjeta_pago"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtVencimientoTarjetaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_vencimiento_tarjeta"
            android:inputType="text"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/cvv_pago"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtCvvTarjetaPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:text="@string/direccion_pago"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtDireccionPago"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000" />
        <TextView
            android:id="@+id/tvTotalVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="Total a pagar: $10.00"/>

        <Button
            android:id="@+id/btnPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/pink_200"
            android:text="@string/btn_pago"
            android:textColor="#fff" />
    </LinearLayout>
</ScrollView>